--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Football Apps</string>
+	<string name="title_front_page_menu_matches">Matches</string>
+	<string name="title_front_page_menu_teams">Teams</string>
+	<string name="title_front_page_menu_favorites">Favorites</string>
 </resources>
